# guided-review

./: AGENTS.md  Cargo.toml  LICENSE  README.CN.md  README.md  justfile
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs  main.rs  serve.rs
crates/cli/tests/: generate.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  pull_request.rs  render.rs  review.rs
crates/core/templates/: claim-card.html.hbs  claim-card.js  code-card.js  evidence.html.hbs  file-link.html.hbs  file-link.js  guided-review.html.hbs  page-header.html.hbs  theme-switch.html.hbs
examples/: review.json
skill/: SKILL.md
skill/agents/: openai.yaml
skill/references/: industry-practices.md
src/: cli.rs  file_icons.rs  lib.rs  main.rs  render.rs  review.rs
templates/: claim-row.html.hbs  claim-row.js  evidence.html.hbs  file-link.html.hbs  guided-review.html.hbs  page-header.html.hbs  status-badge.js
tests/: generate.rs
