[package]
name = "guided-review"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "egr"
path = "src/main.rs"

[dependencies]
guided-review-core.workspace = true
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
serde_json.workspace = true
